--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-fastapi
-uvicorn
-python-multipart
-obspy
+fastapi==0.115.0
+uvicorn==0.31.0
+python-multipart==0.0.12
+obspy==1.4.1
+numpy==2.1.1
+matplotlib==3.9.2
